feat: Updated the profile image
This updates the profile image.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </nav>
   <section class="hero">
-    <img src="https://avatars.githubusercontent.com/u/your-github-id?v=4" alt="Profile" class="profile-img">
+    <img src="https://github.com/iammelvz/portfolio/blob/main/melvz.jpg" alt="Profile" class="profile-img">
     <h1 class="display-5 fw-bold">Melvin Gungog</h1>
     <p class="lead">Backend Developer | Cloud Solutions | API Specialist</p>
     <a href="Melvin%20Gungog%20Resume.docx.pdf" class="btn btn-primary btn-lg" download>Download CV</a>
