feat: Updated the download CV
This updates the download CV

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="Melvin%20Gungog%20Resume.docx.pdf" download>Download CV</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://github.com/iammelvz/portfolio/blob/main/Melvin%20Gungog%20Resume.docx.pdf" download>Download CV</a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +37,7 @@
     <img src="https://github.com/iammelvz/portfolio/blob/main/melvz.jpg" alt="Profile" class="profile-img">
     <h1 class="display-5 fw-bold">Melvin Gungog</h1>
     <p class="lead">Backend Developer | Cloud Solutions | API Specialist</p>
-    <a href="Melvin%20Gungog%20Resume.docx.pdf" class="btn btn-primary btn-lg" download>Download CV</a>
+    <a href="https://github.com/iammelvz/portfolio/blob/main/Melvin%20Gungog%20Resume.docx.pdf" class="btn btn-primary btn-lg" download>Download CV</a>
   </section>
   <div class="container">
     <section id="about">
